[tool.poetry]
name = "python weekend"
version = "0.1.0"
description = ""
authors = ["4d4mk0 <mikulasek.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
DateTime = "^4.4"
redis = "^4.3.3"
SQLAlchemy = "^1.4.37"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
